[workspace]
members = [
  ".",
  "hyades-core"
]

[package]
name = "hyades"
version = "0.0.1"
license = "mit OR apache-2.0"
repository = "https://github.com/abhijeetbhagat/hyades"
description = "implementation of the SCTP protocol in rust"
edition = "2018"
authors = ["abhi"]

[dependencies]
hyades-core = {path = "hyades-core"}
structopt = "0.3.21"
log = "0.4.14"
env_logger = "0.8.3"
tokio = { version = "1.5.0", features = ["rt", "macros"] }

[[bin]]
name = "endpoint"
path = "src/main.rs"

[[test]]
name = "chunks_tests"
path = "hyades-core/tests/chunks_tests.rs"
