[package]
name = "hyades-core"
version = "0.0.1"
license = "mit or apache-2.0"
repository = "https://github.com/abhijeetbhagat/hyades"
description = "core crate"
edition = "2018"
authors = ["abhi"]

[dependencies]
tokio = { version = "1.5.0", features = ["net", "time"] }
crc32c = "0.6.0"
rand = { version = "0.8.3", features = ["std_rng"] }
thiserror = "1.0.24"
log = "0.4.14"
env_logger = "0.8.3"
ring = "0.16.20"
